The same update (forgotten files)
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7580 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/tools/UpdaterCommon/UpdaterCommon.csproj
+++ b/Languages/tools/UpdaterCommon/UpdaterCommon.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Updater.Common</RootNamespace>
-    <AssemblyName>ShareazaUpdater.Common</AssemblyName>
+    <AssemblyName>SkinUpdater.Common</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
