--- a/Languages/tools/UpdaterCommon/UpdaterCommon.csproj
+++ b/Languages/tools/UpdaterCommon/UpdaterCommon.csproj
@@ -108,6 +108,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Settings.settings">
       <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
