--- a/Languages/tools/UpdaterCommon/app.config
+++ b/Languages/tools/UpdaterCommon/app.config
@@ -16,8 +16,8 @@
             <setting name="Error" serializeAs="String">
                 <value>Error</value>
             </setting>
-            <setting name="TranslationMismatch" serializeAs="String">
-                <value>The old english file doesn't match your translation file!</value>
+            <setting name="UpdateMismatch" serializeAs="String">
+                <value>The old english file doesn't match your updated file!</value>
             </setting>
             <setting name="InvalidXml" serializeAs="String">
                 <value>Invalid XML</value>
@@ -53,7 +53,7 @@
                 <value>&amp;Export Changes</value>
             </setting>
             <setting name="FormTitle" serializeAs="String">
-                <value>Shareaza Translation Updater</value>
+                <value>Shareaza Dialog Translation Updater</value>
             </setting>
             <setting name="StepOneExplanation" serializeAs="String">
                 <value>1. Open old english XML:</value>
