--- a/GeoIP/GeoIP_9.vcproj
+++ b/GeoIP/GeoIP_9.vcproj
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="9,00"
 	Name="GeoIP"
 	ProjectGUID="{DFAB04E0-9275-42FB-BCBB-2F153EB7D253}"
 	RootNamespace="GeoIP"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -19,18 +20,17 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\"
-			IntermediateDirectory="$(OutDir)$(ProjectName)"
+			OutputDirectory="$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="2"
+			CharacterSet="0"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
-				Description="Copying $(ProjectName) files..."
-				CommandLine="xcopy &quot;$(SolutionDir)..\GeoIP\GeoIP.dat&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;"
-				Outputs="&quot;$(OutDir)GeoIP.dat&quot;"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCXMLDataGeneratorTool"
@@ -45,13 +45,11 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;DLL;_CRT_SECURE_NO_DEPRECATE"
-				MinimalRebuild="true"
+				ExceptionHandling="0"
 				BasicRuntimeChecks="3"
-				SmallerTypeCheck="true"
 				RuntimeLibrary="1"
+				EnableFunctionLevelLinking="true"
 				RuntimeTypeInfo="false"
-				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
-				WarningLevel="3"
 				DebugInformationFormat="4"
 			/>
 			<Tool
@@ -66,7 +64,6 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="ws2_32.lib"
-				OutputFile="$(OutDir)$(ProjectName).dll"
 				GenerateManifest="false"
 				GenerateDebugInformation="true"
 			/>
@@ -89,26 +86,22 @@
 				Name="VCAppVerifierTool"
 			/>
 			<Tool
-				Name="VCWebDeploymentTool"
-			/>
-			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
 		<Configuration
 			Name="Debug|x64"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\"
-			IntermediateDirectory="$(OutDir)$(ProjectName)"
+			OutputDirectory="$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="2"
+			CharacterSet="0"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
-				Description="Copying $(ProjectName) files..."
-				CommandLine="xcopy &quot;$(SolutionDir)..\GeoIP\GeoIP.dat&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;"
-				Outputs="&quot;$(OutDir)GeoIP.dat&quot;"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCXMLDataGeneratorTool"
@@ -123,13 +116,11 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				PreprocessorDefinitions="WIN64;WIN32;_DEBUG;_WINDOWS;_USRDLL;DLL;_CRT_SECURE_NO_DEPRECATE"
-				MinimalRebuild="true"
+				ExceptionHandling="0"
 				BasicRuntimeChecks="3"
-				SmallerTypeCheck="true"
 				RuntimeLibrary="1"
+				EnableFunctionLevelLinking="true"
 				RuntimeTypeInfo="false"
-				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
-				WarningLevel="3"
 				DebugInformationFormat="3"
 			/>
 			<Tool
@@ -144,7 +135,6 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="ws2_32.lib"
-				OutputFile="$(OutDir)$(ProjectName).dll"
 				GenerateManifest="false"
 				GenerateDebugInformation="true"
 				TargetMachine="17"
@@ -168,17 +158,15 @@
 				Name="VCAppVerifierTool"
 			/>
 			<Tool
-				Name="VCWebDeploymentTool"
-			/>
-			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\"
-			IntermediateDirectory="$(OutDir)$(ProjectName)"
+			OutputDirectory="$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="2"
+			CharacterSet="0"
 			WholeProgramOptimization="1"
 			>
 			<Tool
@@ -186,9 +174,7 @@
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
-				Description="Copying $(ProjectName) files..."
-				CommandLine="xcopy &quot;$(SolutionDir)..\GeoIP\GeoIP.dat&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;"
-				Outputs="&quot;$(OutDir)GeoIP.dat&quot;"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCXMLDataGeneratorTool"
@@ -201,13 +187,16 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				Optimization="3"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
+				OmitFramePointers="true"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;DLL;_CRT_SECURE_NO_DEPRECATE"
-				MinimalRebuild="true"
-				RuntimeLibrary="2"
+				StringPooling="true"
+				ExceptionHandling="0"
+				RuntimeLibrary="0"
 				RuntimeTypeInfo="false"
-				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
-				WarningLevel="3"
-				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -221,11 +210,9 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="ws2_32.lib"
-				OutputFile="$(OutDir)$(ProjectName).dll"
-				GenerateDebugInformation="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				OptimizeForWindows98="1"
+				SetChecksum="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -246,17 +233,15 @@
 				Name="VCAppVerifierTool"
 			/>
 			<Tool
-				Name="VCWebDeploymentTool"
-			/>
-			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
 		<Configuration
 			Name="Release|x64"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\"
-			IntermediateDirectory="$(OutDir)$(ProjectName)"
+			OutputDirectory="$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="2"
+			CharacterSet="0"
 			WholeProgramOptimization="1"
 			>
 			<Tool
@@ -264,9 +249,7 @@
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
-				Description="Copying $(ProjectName) files..."
-				CommandLine="xcopy &quot;$(SolutionDir)..\GeoIP\GeoIP.dat&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;"
-				Outputs="&quot;$(OutDir)GeoIP.dat&quot;"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCXMLDataGeneratorTool"
@@ -279,13 +262,16 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				Optimization="3"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
+				OmitFramePointers="true"
 				PreprocessorDefinitions="WIN64;WIN32;NDEBUG;_WINDOWS;_USRDLL;DLL;_CRT_SECURE_NO_DEPRECATE"
-				MinimalRebuild="true"
-				RuntimeLibrary="2"
+				StringPooling="true"
+				ExceptionHandling="0"
+				RuntimeLibrary="0"
 				RuntimeTypeInfo="false"
-				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
-				WarningLevel="3"
-				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -299,11 +285,9 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="ws2_32.lib"
-				OutputFile="$(OutDir)$(ProjectName).dll"
-				GenerateDebugInformation="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				OptimizeForWindows98="1"
+				SetChecksum="true"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -323,9 +307,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -341,7 +322,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\GeoIP\GeoIP.c"
+				RelativePath="GeoIP.c"
 				>
 			</File>
 		</Filter>
@@ -351,16 +332,16 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\GeoIP\GeoIP.h"
+				RelativePath="GeoIP.h"
 				>
 			</File>
 			<File
-				RelativePath="..\GeoIP\resource.h"
+				RelativePath="resource.h"
 				>
 			</File>
 		</Filter>
 		<File
-			RelativePath="..\GeoIP\GeoIP.rc"
+			RelativePath="GeoIP.rc"
 			>
 		</File>
 	</Files>
